--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "portfolio-website",
   "private": true,
+  "homepage": "https://wahajahmed.github.io/portfolio-website",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
