--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio-website",
   "private": true,
-  "homepage": "https://wahajahmad-cyber.github.io/wahajahmad-cyber.github.io",
+  "homepage": "https://wahajahmad-cyber.github.io",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
